[gd_scene load_steps=16 format=3 uid="uid://dq5hclarh538y"]

[ext_resource type="Script" path="res://Enemies/Scripts/lil_man.gd" id="1_dci6j"]
[ext_resource type="Texture2D" uid="uid://bqgskky62lvnx" path="res://Enemies/Sprites/Spr_lilman_hit.png" id="1_wbgb7"]
[ext_resource type="Texture2D" uid="uid://cdh23uiiwsm2" path="res://Enemies/Sprites/Spr_lilman_strip4.png" id="2_rd6j1"]
[ext_resource type="PackedScene" uid="uid://c4puss72atg63" path="res://Enemies/Scenes/enemy_area.tscn" id="2_x0qu0"]
[ext_resource type="PackedScene" uid="uid://bopv1ey8ybcar" path="res://Visual/Scenes/smoke_particle.tscn" id="3_28c2c"]
[ext_resource type="Shader" path="res://Visual/Shaders/flash.gdshader" id="3_cn2b8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2sje"]
size = Vector2(29, 34)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ppi4r"]
resource_local_to_scene = true
shader = ExtResource("3_cn2b8")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7kqok"]
atlas = ExtResource("1_wbgb7")
region = Rect2(0, 0, 27, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1htu"]
atlas = ExtResource("2_rd6j1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovcar"]
atlas = ExtResource("2_rd6j1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxali"]
atlas = ExtResource("2_rd6j1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gjdw"]
atlas = ExtResource("2_rd6j1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ciq5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kqok")
}],
"loop": true,
"name": &"hit",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1htu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovcar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxali")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gjdw")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mv1hp"]
size = Vector2(16, 25)

[node name="Lil Man" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 8
script = ExtResource("1_dci6j")
speed = 70
min_launch_x = -500

[node name="EnemyArea" parent="." instance=ExtResource("2_x0qu0")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
position = Vector2(-0.5, -15)
shape = SubResource("RectangleShape2D_s2sje")
debug_color = Color(0, 0.632367, 0.452254, 0.42)

[node name="Smoke Particle" parent="." instance=ExtResource("3_28c2c")]
position = Vector2(-1, -11)
color = Color(0.929412, 0.956863, 0.929412, 1)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ppi4r")
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_ciq5c")
animation = &"walk"
frame = 2
frame_progress = 0.294081

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_mv1hp")
debug_color = Color(0.981531, 0, 0.370245, 0.42)

[node name="Ground Check" type="RayCast2D" parent="."]
position = Vector2(10, -20)
target_position = Vector2(0, 29)

[node name="Wall Check" type="RayCast2D" parent="."]
position = Vector2(0, -12)
target_position = Vector2(13, 0)

[node name="Flash Timer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-3.57628e-07, -14.5)
scale = Vector2(1.3, 1.55)

[node name="Death Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Flash Timer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="Death Timer" to="." method="_on_death_timer_timeout"]
